@@ -4,6 +4,14 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* we now run bashrcs (profile and user) every phase to match portage
+  behaviour.  If folks desire it, a patch making that optional would be
+  welcome.
+
+* add support for /etc/portage/package.env and /etc/portage/env/.  Note
+  that we only allow settings there to affect the bash environment- trying
+  to adjust FEATURES from those files isn't on the intended support list.
+
 * use ${LIBDIR_${ABI}} for ccache/distcc pathways; gentoo bug 355283.
 
 * profile interpretation of make.defaults now has access to variables
